@@ -341,11 +341,11 @@ public:
 	void set_std_delay(int msecs)
 		{ std_delay = msecs; }
 	inline Actor *get_npc(long npc_num) const
-		{ return (npc_num >= 0 && npc_num < (int)npcs.size()) ? 
+		{ return (npc_num >= 0 && npc_num < static_cast<int>(npcs.size())) ? 
 				npcs[npc_num] : 0; }
 	void locate_npc(int npc_num);
 	void set_body(int npc_num, Dead_body *body)
-		{ if (npc_num >= (int)bodies.size())
+		{ if (npc_num >= static_cast<int>(bodies.size()))
 			bodies.resize(npc_num + 1);
 		  bodies[npc_num] = body;
 		}
