@@ -245,7 +245,7 @@ void Mouse::set_speed_cursor()
 
 	// Check if we are in dont_move mode, in this case display the hand cursor
 	if (gwin->main_actor_dont_move())
-			cursor = hand;
+		cursor = hand;
 			/* Can again, optionally move in gump mode. */
 	else if (gump_man->gump_mode()) {
 		if (gump_man->gumps_dont_pause_game())
@@ -283,7 +283,7 @@ void Mouse::set_speed_cursor()
 		}
 	}
 	else if (Combat::is_paused())
-	cursor = short_combat_arrows[0];	// Short N red arrow.
+		cursor = short_combat_arrows[0];	// Short N red arrow.
 	if (cursor == dontchange)
 	{
 		Barge_object *barge = gwin->get_moving_barge();
